syntax =  "proto3";

package com.improving.app.member.domain;

import "com/improving/app/common/domain/address.proto";
import "com/improving/app/common/domain/ids.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";
import "validate/validate.proto";

enum NotificationPreference {
  option (scalapb.enum_options).extends = "com.improving.app.common.serialize.PBEnumSerializable";
  NOTIFICATION_PREFERENCE_EMAIL = 0;
  NOTIFICATION_PREFERENCE_SMS = 1;
  NOTIFICATION_PREFERENCE_APPLICATION = 2;
}

enum MemberState {
  option (scalapb.enum_options).extends = "com.improving.app.common.serialize.PBEnumSerializable";
  MEMBER_STATE_DRAFT = 0;
  MEMBER_STATE_ACTIVE = 1;
  MEMBER_STATE_SUSPENDED = 2;
}

message MemberInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  string handle = 1 [(validate.rules).string.min_len = 1];
  string avatar_url = 2 [(validate.rules).string.min_len = 1];
  string first_name = 3 [(validate.rules).string.min_len = 1];
  string last_name = 4 [(validate.rules).string.min_len = 1];
  optional NotificationPreference notification_preference = 5;
  common.domain.Contact contact = 6;
  repeated common.domain.OrganizationId organization_membership = 7 [(validate.rules).repeated.min_items = 1];
  common.domain.TenantId tenant = 8;
}

message MemberMap {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  common.domain.MemberId member_id = 1;
  MemberInfo member_info = 2;
}

message MemberMetaInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  google.protobuf.Timestamp created_on = 1;
  common.domain.MemberId created_by = 2;
  google.protobuf.Timestamp last_modified_on = 3;
  common.domain.MemberId last_modified_by = 4;
  MemberState current_state = 5;
}

message EditableInfo {
    option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
    optional string handle = 1 [(validate.rules).string.min_len = 1];
    optional string avatar_url = 2 [(validate.rules).string.min_len = 1];
    optional string first_name = 3 [(validate.rules).string.min_len = 1];
    optional string last_name = 4 [(validate.rules).string.min_len = 1];
    optional NotificationPreference notification_preference = 5;
    optional common.domain.Contact contact = 6;
    repeated common.domain.OrganizationId organization_membership = 7;
    optional common.domain.TenantId tenant = 8;
}