syntax =  "proto3";

package com.improving.app.member.domain;

import "com/improving/app/common/domain/ids.proto";
import "com/improving/app/member/domain/memberDomainObjects.proto";
import "scalapb/scalapb.proto";

message RegisterMember {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
    EditableInfo member_info = 2;
    common.domain.MemberId registering_member = 3;
}

message ActivateMember {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
    common.domain.MemberId activating_member = 2;
}

message SuspendMember {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
    common.domain.MemberId suspending_member = 2;
}

message TerminateMember {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
    common.domain.MemberId terminating_member = 2;
}

message EditMemberInfo {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
    EditableInfo member_info = 2;
    common.domain.MemberId editing_member = 3;
}

message GetMemberInfo {
    option (scalapb.message).extends = "com.improving.app.member.domain.Member.HasMemberId";
    common.domain.MemberId member_id = 1;
}

message MemberRequest{
    option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

    oneof sealed_value {
        RegisterMember register_member_value = 1;
        ActivateMember activate_member_value = 2;
        SuspendMember suspend_member_value = 4;
        TerminateMember terminate_member_value = 5;
        EditMemberInfo edit_member_info_value = 6;
        GetMemberInfo get_member_info_value = 7;
    }
}
